NEXT:
 * ls-project add --unused option
 * ls-project <result> only shows chroot groups used by listed results
 * ls-project <result> only shows licences used by the listed sources
 * Add new source type "licence", providing licence info to build environment
 * Removed lazytag build mode, it was deprecated for a long time
 * Fix error in cvs source if cvsroot unset

e2factory-2.3.16p0
 * Fix collect_project, include default result and its deps into the BuildID

e2factory-2.3.16
 * Fix e2 fetch-sources --update for git repos
 * Add experimental gitrepo source type

e2factory-2.3.16rc1
 * Fix doubled up error message on Control-C
 * Fix e2factory sometimes ignoring Control-C
 * Fix unintended modification of the git index in working source directory.
 * Add sha256 support to e2source file config
 * Add sha256 support to e2licence config
 * Add sha256 support to e2chroot config
 * Add selection of checksum algorithms to proj/config
 * Fix checksum verification of some file sources used by collect_project
 * Fix SourceID calculation in files plugin under artificial conditions
 * Remove error message when an optional tool isn't present

e2factory-2.3.15
 * result.tar does not contain leading ./ prefix any more
 * added typo detection in source and result config files
 * reduced warning noise
 * add warning for empty e2env references
 * make the cache truly transparent
 * improve error reporting in dependency cycle detection
 * ls-project displays sub-licenses of file sources
 * add warning when deploying release builds to disabled server
 * improve error handling when encountering erroneous config files
 * prevent manipulation of the lua string module from config files
 * reduce what's possible (but not advertised) in config files
 * fix CVS/SVN LicenseID calculation
 * detect if an unpack location in a source config points to non-existent dir
 * put an end to changing the working directory of the process repeatedly