@@ -1,4 +1,5 @@
 NEXT:
+ * fixed sub-licences handling for file sources
  * ls-project add --unused option
  * ls-project <result> only shows chroot groups used by listed results
  * ls-project <result> only shows licences used by the listed sources
